# inf8225-projet

./: .gitmodules  README.md  report.txt  separate.py
RUN-CSP-v2/: analysis.ipynb  cp.py  data_utils.py  evaluate.py  greedy.py  greedy_is.py  main.py  model.py  pyproject.toml  requirements.txt  setup.sh  train.py
RUN-CSP-v2/MAX-CSP/: model_best.ckpt.data-00000-of-00001  model_best.ckpt.index
RUN-CSP-v2/MAX-CSP/test/: events.out.tfevents.1777160415.Desktop-Romain  events.out.tfevents.1777168977.Desktop-Romain  events.out.tfevents.1777169038.Desktop-Romain  events.out.tfevents.1777169139.Desktop-Romain
RUN-CSP-v2/MAX-CSP/train/: events.out.tfevents.1777160415.Desktop-Romain  events.out.tfevents.1777168977.Desktop-Romain  events.out.tfevents.1777169038.Desktop-Romain  events.out.tfevents.1777169139.Desktop-Romain
RUN-CSP-v2/data/: .gitignore
RUN-CSP-v2/saved_graphs/GR64/: graph_1.dimacs  graph_100.dimacs  graph_102.dimacs  graph_106.dimacs  graph_108.dimacs  graph_109.dimacs  graph_11.dimacs  graph_110.dimacs  graph_111.dimacs  graph_112.dimacs  graph_113.dimacs  graph_114.dimacs  graph_115.dimacs  graph_116.dimacs  graph_117.dimacs  graph_118.dimacs  graph_12.dimacs  graph_120.dimacs  graph_121.dimacs  graph_122.dimacs  graph_123.dimacs  graph_127.dimacs  graph_130.dimacs  graph_131.dimacs  graph_132.dimacs  graph_135.dimacs  graph_137.dimacs  graph_140.dimacs  graph_141.dimacs  graph_142.dimacs  graph_143.dimacs  graph_145.dimacs  graph_147.dimacs  graph_149.dimacs  graph_15.dimacs  graph_150.dimacs  graph_153.dimacs  graph_154.dimacs  graph_156.dimacs  (+82 more)
(+681 files in other folders)
